--- a/vue/test.html
+++ b/vue/test.html
@@ -10,7 +10,7 @@
 
     <div id="app">
       <p>{{ message }}</p>
-      <button v-on:click="reverseMessage">メッセージ反転</button>
+      <p>{{ sayHi() }}</p>
     </div>
     <script>
       new Vue({
@@ -19,8 +19,8 @@
           message: 'HelloWorld!'
         },
         methods: {
-          reverseMessage: function() {
-            this.message = this.message.split('').reverse().join('');
+          sayHi: function() {
+            return this.message;
           }
         }
       })
