--- a/vue/test.html
+++ b/vue/test.html
@@ -9,18 +9,22 @@
     <script src="vue.js"></script>
 
     <div id="app">
-      <p>{{ message }}</p>
+      <p v-once>{{ message }}</p>
       <p>{{ sayHi() }}</p>
+      <p v-text="message"></p>
+      <a v-bind:href="url">Google</a>
     </div>
     <script>
       new Vue({
         el: '#app',
         data: {
+          url: 'https://google.com',
           message: 'HelloWorld!'
         },
         methods: {
           sayHi: function() {
-            return this.message;
+            this.message = 'Hello VueJS';
+            return 'Hi';
           }
         }
       })
