--- a/vue/test.html
+++ b/vue/test.html
@@ -16,6 +16,8 @@
       <a v-bind="twitterObject">Twitter</a>
       <p>現在{{ number }}回クリックされています</p>
       <button v-on:click="countUp">カウントアップ</button>
+      <p v-on:mousemove="changeMousePosition">マウスを乗せてください</p>
+      <p>X:{{x}}, Y:{{y}}</p>
     </div>
     <script>
       new Vue({
@@ -27,7 +29,9 @@
             href: 'https://twitter.com',
             id: 31
           },
-          number: 0
+          number: 0,
+          x: 0,
+          y: 0
         },
         methods: {
           sayHi: function() {
@@ -36,6 +40,10 @@
           },
           countUp: function() {
             this.number += 1
+          },
+          changeMousePosition: function(event) {
+            this.x = event.clientX;
+            this.y = event.clientY;
           }
         }
       })
