--- a/vue/test.html
+++ b/vue/test.html
@@ -16,7 +16,8 @@
       <a v-bind="twitterObject">Twitter</a>
       <p>現在{{ number }}回クリックされています</p>
       <button v-on:click="countUp">カウントアップ</button>
-      <p v-on:mousemove="changeMousePosition">マウスを乗せてください</p>
+      <p v-on:mousemove="changeMousePosition($event, 3)">マウスを乗せてください
+      <span v-on:mousemove.stop>反応しないでください</span></p>
       <p>X:{{x}}, Y:{{y}}</p>
     </div>
     <script>
@@ -41,9 +42,9 @@
           countUp: function() {
             this.number += 1
           },
-          changeMousePosition: function(event) {
-            this.x = event.clientX;
-            this.y = event.clientY;
+          changeMousePosition: function(event, divideNumber) {
+            this.x = event.clientX / divideNumber;
+            this.y = event.clientY / divideNumber;
           }
         }
       })
