コーディング練習

--- a/vue/test.html
+++ b/vue/test.html
@@ -38,7 +38,7 @@
         methods: {
           sayHi: function() {
             this.message = 'Hello VueJS';
-            return 'Hi';
+            return 'Hi!';
           },
           countUp: function() {
             this.number += 1
