--- a/vue/test.html
+++ b/vue/test.html
@@ -15,7 +15,7 @@
       <a v-bind:href="url">Google</a>
       <a v-bind="twitterObject">Twitter</a>
       <p>現在{{ number }}回クリックされています</p>
-      <button v-on:click="countUp">カウントアップ</button>
+      <button @click="countUp">カウントアップ</button>
       <p v-on:mousemove="changeMousePosition($event, 3)">マウスを乗せてください
       <span v-on:mousemove.stop>反応しないでください</span></p>
       <p>X:{{x}}, Y:{{y}}</p>
