--- a/vue/test.html
+++ b/vue/test.html
@@ -4,32 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="test.css">
   </head>
   <body>
     <script src="vue.js"></script>
 
     <div id="app">
-      <p>{{ counter }}</p>
-        <button @click="counter += 1">+1</button>
-        <p>{{ lessThanThree }}</p>
+      <h1 :class="classObject">Hello</h1>
+      <button @click="isActive = !isActive">切り替え</button>
     </div>
     <script>
       new Vue({
         el: '#app',
         data: {
-          counter: 0
+          isActive: true
         },
         computed: {
-          lessThanThree: function() {
-            return this.counter > 3 ? '3より上' : '3以下'
-          }
-        },
-        watch : {
-          counter: function() {
-            const vm = this;
-            setTimeout(function(){
-              vm.counter = 0;
-            }, 3000)
+          classObject: function() {
+            return {
+              red: this.isActive,
+              'bg-blue': !this.isActive
+            }
           }
         }
       })
