--- a/vue/test.html
+++ b/vue/test.html
@@ -11,13 +11,18 @@
 
     <div id="app">
       <h1 :class="classObject">Hello</h1>
+      <h1 :style="styleObject">Hello2</h1>
       <button @click="isActive = !isActive">切り替え</button>
     </div>
     <script>
       new Vue({
         el: '#app',
         data: {
-          isActive: true
+          isActive: true,
+          styleObject: {
+            color: 'red',
+            'background-color': 'blue'
+          }
         },
         computed: {
           classObject: function() {
