--- a/vue/test.html
+++ b/vue/test.html
@@ -13,6 +13,7 @@
       <h1 :class="classObject">Hello</h1>
       <h1 :style="styleObject">Hello2</h1>
       <button @click="isActive = !isActive">切り替え</button>
+      <p v-if="ok">OK!</p>
     </div>
     <script>
       new Vue({
@@ -22,7 +23,8 @@
           styleObject: {
             color: 'red',
             'background-color': 'blue'
-          }
+          },
+          ok: true,
         },
         computed: {
           classObject: function() {
