--- a/vue/test.html
+++ b/vue/test.html
@@ -15,22 +15,26 @@
 
     <div id="app2">
       <p>{{ message }}</p>
+      <button @click="changeMessage1">インスタンス1のmessageを変更</button>
     </div>
     <script>
-      const vm = new Vue({
+      const vm1 = new Vue({
         el: '#app1',
         data: {
           message: 'インスタンス1'
         }
       })
 
-      vm.message = '書き換えられました'
-
-      new Vue({
+      const vm2 = new Vue({
         el: '#app2',
         data: {
           message: 'インスタンス2'
-        }
+        },
+        methods: {
+          changeMessage1: function() {
+            vm1.message = 'インスタンス2から変えました'
+          }
+        },
       })
     </script>
   </body>
