--- a/vue/test2.html
+++ b/vue/test2.html
@@ -21,8 +21,14 @@
             number: 12
           }
         },
-        template: '<p>いいね({{ number }})</p>'
-      })
+        template: '<p>いいね({{ number }})<button @click="increment">+1</button></p>',
+        methods: {
+          increment: function() {
+            this.number += 1
+          }
+        }
+      }),
+
       new Vue({
         el: '#app',
       });
