コーディング練習

--- a/vue/test2.html
+++ b/vue/test2.html
@@ -9,13 +9,20 @@
   <body>
     <script src="vue.js"></script>
 
-    <div id="app">
+    <div id="app1">
+      <my-component></my-component>
+      <my-component></my-component>
+      <my-component></my-component>
+      <hr>5
+    </div>
+
+    <div id="app2">
       <my-component></my-component>
       <my-component></my-component>
       <my-component></my-component>
     </div>
     <script>
-      Vue.component('my-component', {
+      var component = {
         data: function() {
           return {
             number: 12
@@ -27,10 +34,17 @@
             this.number += 1
           }
         }
-      }),
+      }
 
       new Vue({
-        el: '#app',
+        el: '#app1',
+        components: {
+          'my-component': component
+        }
+      });
+
+      new Vue({
+        el: '#app2',
       });
     </script>
   </body>
