コーディング練習

--- a/js/useHelloworld.html
+++ b/js/useHelloworld.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <noscript>JavaScriptが利用できないブラウザです</noscript>
-<script type="text/javascript" src="showLiterals.js"></script>
+<script type="text/javascript" src="jsPractice.js"></script>
 </body>
 </html>
